# sudoku

./: README.md  main.py  pyproject.toml  requirements.txt
data/: bad_char_file.txt  dead_end_first_cell.txt  example1.txt  one_candidates.txt  short_row_file.txt  too_many_rows_file.txt  zero_candidates.txt
src/sudoku/: __init__.py  board.py  load_board.py  move.py
src/sudoku.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_board.py  test_find_empty.py  test_load_board.py  test_new_solve.py  test_rule.py  test_solve.py
